<resources>
    <string name="app_name">BusinessCard</string>
    <string name="label_business_card">Cartão de Visitas</string>
    <string name="label_description_new_card">Novo Cartão</string>
    <string name="label_name">Nome</string>
    <string name="label_phone">Telefone</string>
    <string name="label_email">Email</string>
    <string name="label_company">Nome da Empresa</string>
    <string name="label_cadastrar">Cadastrar</string>
</resources>